meteor/client/ui/SegmentOnePartLine/SegmentOnePartLine.scss
@import '../../styles/colorScheme';
@import '../../styles/utils';
@import '../../styles/variables';
@import '../../styles/itemTypeColors';

/** Loans from rundownView.scss, to be refactored to a shared variable file */
$segment-title-background-color: #4b4b4b;
$segment-header-width: 12.5rem;

$part-height: 2.5em;

$part-border-margin: 1.5em;
$part-border-color: #a7a7a760;

$duration-area-width: 3.4em;
$duration-area-margin: 0.6em;

.segment-timeline.segment-opl {
	display: block;

	> .segment-opl__title {
		display: grid;
		grid-template-rows: auto;
		grid-template-columns: max-content max-content auto;

		> .segment-opl__counters {
			display: flex;
		}

		.segment-opl__duration,
		.segment-opl__timeUntil {
			box-sizing: border-box;
			text-align: left;
			padding: 0.4em $duration-area-margin 0 $duration-area-margin;
			line-height: 1em;
			font-weight: 400;
			transition: 0.3s color;

			> .segment-timeline__duration__label,
			> .segment-timeline__timeUntil__label {
				display: block;
				font-size: 0.5em;
				text-transform: uppercase;
				line-height: 1em;
				color: #888;
			}
		}

		.segment-opl__timeUntil {
			color: #888;

			&--time-of-day {
				color: #fff;
				font-weight: 500;
			}
		}

		> h2.segment-opl__title__label {
			margin: 0.2em 1em 0 0;
			padding: 0;
			line-height: 1.3em;
			font-weight: 400;
			font-size: 1.5em;
		}
	}

	> .segment-opl__part-list {
		display: block;

		> .segment-opl__part {
			position: relative;
			display: grid;
			min-height: $part-height;
			grid-template-rows: minmax($part-height, auto);
			grid-template-columns: [header] $segment-header-width [timeline] minmax(10em, 1fr) [piece-icons] 300px [end];
			grid-template-areas: 'header timeline piece-icons';

			@include invalid-overlay();
			@include floated-overlay();

			@media screen and (max-width: $portrait-mode-breakpoint) {
				grid-template-rows: minmax($part-height, auto) minmax($part-height, auto) minmax($part-height, auto);
				grid-template-columns: 1fr;
				grid-template-areas:
					'header'
					'timeline'
					'piece-icons';
			}

			> .segment-opl__part-header {
				display: grid;
				position: relative;
				background-color: $segment-title-background-color;
				grid-area: header;
				grid-template-columns: [countdown] $duration-area-width [title] auto [end];
				grid-template-areas: 'countdown title';

				> .segment-opl__part-marker {
					position: absolute;
					height: $part-height;
					width: $duration-area-width;
					background: #ff00ff;
					z-index: 0;

					&--next {
						background: $general-next-color;
					}

					&--live {
						background: $general-live-color;
					}
				}

				> .segment-opl__part-duration {
					grid-area: countdown;

					margin-top: 1em;

					font-weight: 300;
					font-size: 0.8em;

					text-align: center;
					z-index: 1;
				}

				> h3.segment-opl__part-title {
					margin: 0.2em 2em 0.2em 0;
					padding: 0;
					line-height: 1em;
					grid-area: title;

					font-weight: 400;
					font-size: 1em;

					display: flex;
					align-items: center;
					z-index: 1;
				}
			}

			&--next {
				> .segment-opl__part-header > .segment-opl__part-duration {
					color: #000000;
				}
			}

			&--has-played {
				&::before {
					content: ' ';
					display: block;
					position: absolute;
					top: 0;
					left: 0;
					bottom: 0;
					right: 0;
					background: rgba(0, 0, 0, 0.7);
					z-index: 2;
					pointer-events: none;
				}
			}

			> .segment-opl__part-timeline {
				position: relative;
				margin-top: 0.6em;
				margin-left: 0.3em;
				grid-area: timeline;

				@media screen and (max-width: $portrait-mode-breakpoint) {
					margin-left: 2.5em;
					margin-right: 4em;
				}

				> .segment-opl__timeline-flag {
					position: absolute;
					top: -0.4em;
					left: 0;
					bottom: 0.3em;
					width: 2px;
					pointer-events: none;

					> .segment-opl__timeline-flag__label {
						position: absolute;
						display: block;
						top: -0.2em;
						text-transform: uppercase;
						font-weight: bold;
						line-height: 1em;
						white-space: nowrap;
						word-wrap: none;
						padding: 0.1em 0.3em 0.1em 0.2em;
						border-radius: 4px 0.5em 0.5em 0em;
						box-shadow: 0 0 4px 0 #000000ff;
						z-index: 2;
					}
				}

				> .segment-opl__take-line {
					background: $part-start-color;

					&:not(.next).auto {
						width: 1px;
					}

					&:not(.auto) {
						top: -0.2em;
						height: 1.6em;

						&::after {
							top: -3px;
							left: 0px;
							@include take-arrow();
							z-index: 1;
						}

						&::before {
							bottom: -3px;
							left: 0px;
							@include take-arrow();
							z-index: 1;
						}
					}

					&.next {
						top: -0.2em;
						background: $general-next-color;

						> .segment-opl__timeline-flag__label {
							top: -0.35em;
							color: #000000;
							background: $general-next-color;
						}

						&::after {
							display: none;
						}

						&::before {
							border-left-color: $general-next-color;
						}
					}
				}

				> .segment-opl__on-air-line {
					background: $general-live-color;

					> .segment-opl__timeline-flag__label {
						background-color: $general-live-color;
						color: #fff;
					}

					> .segment-opl__on-air-line__countdown {
						position: absolute;
						white-space: nowrap;
						word-wrap: none;
						top: auto;
						bottom: -6px;
						padding-left: 0.2em;

						font-size: 1.2em;
						font-weight: 500;
						color: $liveline-timecode-color;
						letter-spacing: 0.5px;
						text-shadow: -1px -1px 1px #000000ff, 1px 1px 1px #000000ff, 0 0 4px #000000ff;

						> .overtime {
							color: $general-late-color;
						}

						> .rundown-view__part__icon {
							top: -0.2em;
							margin-right: 0.3em;
						}
					}
				}

				> .segment-opl__timeline-shadow {
					display: block;
					position: absolute;
					top: -4px;
					left: 0;
					bottom: 0;
					background: rgba(0, 0, 0, 0.7);
					pointer-events: none;
				}

				> .segment-opl__overtime-shadow {
					display: block;
					position: absolute;
					top: -4px;
					left: 0;
					right: 0;
					bottom: 0.7em;
					background: rgba(0, 0, 0, 0.7);
					pointer-events: none;
					border-left: 2px solid $part-start-color;

					> .segment-opl__overtime-timer {
						display: block;
						margin-top: 0.2em;
						font-weight: 500;
						font-size: 0.8em;
						margin-top: 0.7em;
						margin-left: 0.3em;
						color: #ffffff;
						text-shadow: -1px -1px 1px #000, 1px -1px 1px #000, -1px 1px 1px #000, 1px 1px 1px #000, 2px 2px 3px #000;
					}

					&--no-end {
						border-left: none;
						background: linear-gradient(to right, transparent 0, rgba(0, 0, 0, 0.7) 120px);
					}
				}

				> .segment-opl__freeze-marker {
					position: absolute;
					top: 0.1em;
					margin-left: 0.3em;
				}
			}

			> .segment-opl__piece-indicators {
				background: #141414;
				display: flex;
				padding-top: 0.6em;
				padding-left: 4em;
				padding-right: 0.5em;
				justify-content: flex-end;

				grid-area: piece-icons;

				@media screen and (max-width: $portrait-mode-breakpoint) {
					padding-left: 2.5em;
					justify-content: flex-start;
				}
			}

			&:not(:last-child)::after {
				content: ' ';
				position: absolute;
				display: block;
				top: auto;
				bottom: 0;
				left: $part-border-margin;
				right: $part-border-margin;
				height: 0;
				border-bottom: 1px dashed $part-border-color;
			}
		}
	}
}

